--- a/app/view1/view1.html
+++ b/app/view1/view1.html
@@ -1,1 +1,88 @@
-<p>This is the partial for view 1.</p>
+<div class="jumbotron jumbotron-billboard">
+    <div class="img"></div>
+    <div class="container">
+        <div class="searchrow">
+            <div class="input-group mb-3">
+                <select class="custom-select" id="inputGroupSelect01">
+                    <option selected>Car Manufacturer</option>
+                    <option ng-repeat="maker in vm.carMakers" value="{{ maker.value }}">{{ maker.name }}</option>
+                </select>
+            </div>
+            <div class="input-group mb-3">
+                <select class="custom-select" id="inputGroupSelect02">
+                    <option selected>Car Model</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+        </div>
+        <div class="searchrow">
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect03">
+                    <option selected>Price from</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect04">
+                    <option selected>Price to</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect05">
+                    <option selected>Year from</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect06">
+                    <option selected>Year to</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect07">
+                    <option selected>Miles driven min</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+            <div class="input-group col-2">
+                <select class="custom-select" id="inputGroupSelect08">
+                    <option selected>Miles driven max</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="display">
+    <div class="cars" ng-repeat="car in vm.cars">
+        <div class="card" style="width: 20rem;">
+            <img class="card-img-top" src="{{car.img}}" alt="Card image cap">
+            <div class="card-body">
+                <h4 class="card-title">{{ car.year }} {{ car.name }} {{ car.model }}</h4>
+                <div class="attribute">
+                    <div><b> Price: </b></div>
+                    <div><p> {{ car.price }} {{ car.currency }} </p></div>
+                </div>
+                <p class="card-text">{{ car.description | limitTo: 120 }}...</p>
+                <a href="#" class="btn btn-dark">View</a>
+            </div>
+        </div>
+    </div>
+</div>
