--- a/app/index.html
+++ b/app/index.html
@@ -28,10 +28,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">About us<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#!/view2">About us</a>
+        <a class="nav-link" href="#!/view2">Sell your vehicle</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
