--- a/app/view2/view2.html
+++ b/app/view2/view2.html
@@ -1,5 +1,25 @@
-<p>This is the partial for view 2.</p>
-<p>
-  Showing of 'interpolate' filter:
-  {{ 'Current version is v%VERSION%.' | interpolate }}
-</p>
+<!--<div class="customform">-->
+<!--</div>-->
+<div class="cardwrapper">
+  <div class="customcard" style="width: 80rem;">
+    <div class="card-body">
+      <h5 class="card-title">Advertise your car for free!</h5>
+        <form>
+          <div class="form-group">
+            <label for="registrationNo">Registration number</label>
+            <input type="text" class="form-control" id="registrationNo" aria-describedby="emailHelp" placeholder="Input the vehicles registration number">
+            <!--<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>-->
+          </div>
+          <div class="form-group">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+          </div>
+          <!--<div class="form-check">-->
+            <!--<input type="checkbox" class="form-check-input" id="exampleCheck1">-->
+            <!--<label class="form-check-label" for="exampleCheck1">Check me out</label>-->
+          <!--</div>-->
+          <button type="submit" class="btn btn-dark">Submit</button>
+        </form>
+    </div>
+  </div>
+</div>
