--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,10 @@
   <link rel="icon" type="image/x-icon" href="resources/images/favicon.png" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">-->
+  <!--<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>-->
   <link rel="stylesheet" href="app.css">
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <script src="lib/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -28,10 +31,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">About us<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#!/about">About us<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#!/view2">Sell your vehicle</a>
+        <a class="nav-link" href="#!/createAd">Sell your vehicle</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -43,7 +46,7 @@
 
   <!--<ul class="menu">-->
     <!--<li><a href="#!/">Front page</a></li>-->
-    <!--<li><a href="#!/view2">view2</a></li>-->
+    <!--<li><a href=v2_createAdiev2_createAdiew2</a></li>-->
   <!--</ul>-->
 
   <!--[if lt IE 7]>
@@ -60,8 +63,10 @@
   <script src="lib/angular/angular.js"></script>
   <script src="lib/angular-route/angular-route.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="resources/api.factory.js"></script>
+  <script src="v3_about/about.js"></script>
+  <script src="v1_landing/view1.js"></script>
+  <script src="v2_createAd/view2.js"></script>
   <script src="core/version/version.js"></script>
   <script src="core/version/version-directive.js"></script>
   <script src="core/version/interpolate-filter.js"></script>
