--- a/app/v3_about/about.html
+++ b/app/v3_about/about.html
@@ -1,21 +1,29 @@
 <div class="container">
     <div class="card-deck mb-3 text-center">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+        <div class="card" style="width: 10rem;">
+            <img class="card-img-top img-fluid" src="resources/images/bjarni2.png" alt="Card image cap">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <div class="searchrow">
+                    <b class="card-text">
+                        Bjarni Jens Kristinsson
+                    </b>
+                </div>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+            <img class="card-img-top" src="resources/images/edda3.png" alt="Card image cap">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <b class="card-text">
+                    Edda Pétursdóttir
+                </b>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src=".../100px180/?text=Image cap" alt="Card image cap">
+            <img class="card-img-top" src="resources/images/hinni.png" alt="Card image cap">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <b class="card-text">
+                    Hinrik Már Hreinsson
+                </b>
             </div>
         </div>
     </div>
