Adding photos and fixing stuff

--- a/app/v2_createAd/view2.html
+++ b/app/v2_createAd/view2.html
@@ -127,7 +127,7 @@
                             Description
                         </small>
                     </label>
-                    <textarea class="form-control" id="description" rows="3"></textarea>
+                    <textarea class="form-control" ng-model="description" id="description" rows="3"></textarea>
                 </div>
 
                 <!-- Photo upload -->
