--- a/app/v1_landing/view1.html
+++ b/app/v1_landing/view1.html
@@ -81,7 +81,7 @@
                     <div><p> {{ ad.fields.price }} {{ ad.fields.currency }} </p></div>
                 </div>
                 <p class="card-text">{{ ad.fields.description | limitTo: 120 }}...</p>
-                <a href="#" class="btn btn-dark">View</a>
+                <!--<a href="#" class="btn btn-dark">View</a>-->
             </div>
         </div>
     </div>
