Some layout stuff

--- a/app/v1_landing/view1.html
+++ b/app/v1_landing/view1.html
@@ -73,15 +73,17 @@
 <div class="display">
     <div class="cars" ng-repeat="ad in ads">
         <div class="card" style="width: 20rem;">
-            <img class="card-img-top" src="{{ad.fields.image_url }}" alt="Card image cap">
-            <div class="card-body">
-                <h4 class="card-title">{{ ad.fields.car.year }} {{ ad.fields.car.manufacturer }} {{ ad.fields.car.model }}</h4>
-                <div class="attribute">
-                    <div><b> Price: </b></div>
-                    <div><p> {{ ad.fields.price }} {{ ad.fields.currency }} </p></div>
+            <div class="carcard">
+                <img class="card-img-top" src="{{ad.fields.image_url }}" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title">{{ ad.fields.car.year }} {{ ad.fields.car.manufacturer }} {{ ad.fields.car.model }}</h4>
+                    <div class="attribute">
+                        <div><b> Price: </b></div>
+                        <div><p> {{ ad.fields.price }} {{ ad.fields.currency }} </p></div>
+                    </div>
+                    <p class="card-text">{{ ad.fields.description | limitTo: 120 }}...</p>
+                    <!--<a href="#" class="btn btn-dark">View</a>-->
                 </div>
-                <p class="card-text">{{ ad.fields.description | limitTo: 120 }}...</p>
-                <!--<a href="#" class="btn btn-dark">View</a>-->
             </div>
         </div>
     </div>
